@@ -1,5 +1,11 @@
 2015-10-24  Natalia Portillo  <claunia@claunia.com>
 
+	* Enums.cs:
+	* Device/ScsiCommands.cs:
+	  Added SCSI MODE SENSE(6) and MODE SENSE(10) commands.
+
+2015-10-24  Natalia Portillo  <claunia@claunia.com>
+
 	* Device/ScsiCommands.cs:
 	  Added SCSI TEST UNIT READY.
 
